--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .top-nav {
-    background: linear-gradient(to bottom right, #b5f590, #0f8571);
+    background: linear-gradient(to bottom right, #0c1eb8, #1bebc8);
     height: 50px;  
     top: 0;
     left: 0;     
@@ -12,7 +12,7 @@
     margin-left: 50px;
     font-size: 1.5rem;
     text-decoration: none;
-    font-family: sans-serif;
+   
     
   }
   
