--- a/src/app/payroll-view/payroll-view.component.html
+++ b/src/app/payroll-view/payroll-view.component.html
@@ -1,4 +1,5 @@
 <!-- payroll-view.component.html -->
+<app-dashboard></app-dashboard>
 <form [formGroup]="payrollForm" (ngSubmit)="generatePayslip()">
   <div class="form-group">
     <label for="employeeName">Employee Name:</label>
