--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,12 @@
 <body>  
   <div class="top-nav">
    
-        <a routerLink="/">HOME</a>
+        <a routerLink="/home">HOME</a>
         <a routerLink="/attendance">ATTENDANCE</a>
         <a routerLink="/payroll">PAYROLL</a>
         <a routerLink="/notification">NOTIFICATION</a>  
-        <a routerLink-="/login">LOGIN</a>  
+        <a routerLink="/login">LOGIN</a>  
       
   </div>
-  <div class="content">
-    <router-outlet></router-outlet>
-  </div>
+  
 </body>
