--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,23 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>  
 </head>
-<body>
- 
+<body> 
+  <app-dashboard></app-dashboard>
     <nav class="horizontal-nav">
       <a (click)="selectedSection = 'intro'">Introduction</a>
       <a (click)="selectedSection = 'process'">Process</a>
       <a (click)="selectedSection = 'about'">About</a>
       <a (click)="selectedSection = 'contact'">Contact</a>  
     </nav>
+   
  
 
-  <div class="home-content">
-    <div *ngIf="selectedSection === 'intro'">
+  
+    <div class="container">
+      <div class="image">
+      </div>
       <img class="homepage_img" src="../../assets/home_img.jpg" alt="Introduction Image">
-      <p class="intro">Welcome to Our Fingerprint Authorization System. Simplifying attendance tracking with biometric authentication for accuracy and security. Integrated seamlessly with our Automatic Payroll System for precise and timely compensation. Optimizing efficiency while ensuring robust security measures.</p>
+      <div class="text">
+        <div class="waviy">
+          <span style="--i:1">W</span>
+          <span style="--i:2">E</span>
+          <span style="--i:3">L</span>
+          <span style="--i:4">C</span>
+          <span style="--i:5">O</span>
+          <span style="--i:6">M</span>
+          <span style="--i:7">E</span>                
+         </div>
+        <h1>Welcome to Our Fingerprint Authorization System. Simplifying attendance tracking with biometric authentication for accuracy and security. Integrated seamlessly with our Automatic Payroll System for precise and timely compensation. Optimizing efficiency while ensuring robust security measures
+        </h1>
+      </div>
     </div>
    
-    <div *ngIf="selectedSection === 'process'" class="process">
+    <div  class="process">
        <figure>
         <figcaption>Step:1</figcaption>
         <img src="../../assets/test_1.jpg" alt="Process Image">
@@ -38,17 +53,111 @@
         <figcaption>Step:4</figcaption>
         <img src="../../assets/payroll_fake_img.jpg" alt="Process Image">
       </figure>            
-      <p>This is the content for the Process section.</p>
+      
     </div>
    
-    <div *ngIf="selectedSection === 'about'">
-      
-      <p>This is the content for the About section.</p>
-    </div>
-    <div *ngIf="selectedSection === 'contact'">
-  
-      <p>This is the content for the Contact section.</p>
-    </div>
-    </div>
+    <div class='about'>
+      <div class="responsive-container-block bigContainer">
+        <div class="responsive-container-block Container">
+          <div class="imgContainer">
+            <img class="mainImg" src="../../assets/fbg2.jpg">
+          </div>
+          <div class="responsive-container-block textSide">
+            <p class="text-blk heading">
+              About Us
+            </p>
+            <p class="text-blk subHeading">
+              Welcome to [Your Company Name], where cutting-edge fingerprint authorization transforms time tracking and leave management.
+
+Our Mission
+At [Your Company Name], we're dedicated to simplifying attendance and leave tracking with innovative biometric technology.
+
+Our Solution
+Our fingerprint authorization system offers seamless clock-in/out and leave requests, ensuring accuracy and security for businesses of all sizes.
+            </p>
+            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+              <div class="cardImgContainer">
+                <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+              </div>
+              <div class="cardText">
+                <p class="text-blk cardHeading">
+                  Benefits
+                </p>
+                <p class="text-blk cardSubHeading">
+                  Precision: Say goodbye to time discrepancies with foolproof fingerprint recognition.
+                </p>
+              </div>
+            </div>
+            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+              <div class="cardImgContainer">
+                <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+              </div>
+              <div class="cardText">
+                <p class="text-blk cardHeading">
+                Benefit
+                </p>
+                <p class="text-blk cardSubHeading">
+                  Efficiency: Streamline processes, save time, and reduce administrative hassles.
+                </p>
+              </div>
+            </div>
+            <div class="responsive-cell-block wk-desk-6 wk-ipadp-6 wk-tab-12 wk-mobile-12">
+              <div class="cardImgContainer">
+                <img class="cardImg" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/id2.svg">
+              </div>
+              <div class="cardText">
+                <p class="text-blk cardHeading">
+             Benefit
+                </p>
+                <p class="text-blk cardSubHeading">
+                  Security: Protect sensitive data and prevent unauthorized access with advanced biometric authentication.
+                </p>
+              </div>
+            </div>            
+            <a>
+              <button class="explore">
+                Start Today
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>     
+     </div>
+
+
+     <section id="contact">
+      <div class="cinfo">
+     <h1>CONTACT US</h1>
+        
+          <form  class="enterinfo" >
+              <input  type="text"placeholder="Your Name*" required>
+              
+              <br>
+              <input type="text"placeholder="Your Email*" required>
+             
+             <br>
+             <input  class="moretext"type="text"placeholder="Your Message*" required>
+             
+             <br>
+             <button class="binfo">SEND MESSAGE</button>
+          </form>
+          
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+              <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+            </svg> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+              <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+              <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
+              <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
+              <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503 0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z"/>
+            </svg>
+            
+   </div>   
+  </section> 
+ 
 </body>
 </html>
