--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -19,6 +19,14 @@
   a:hover {
     color: brown;
   }
-  
+  .logout{
+    padding:10px;
+    border-radius: 15px;
+    background-color: rgb(248, 21, 21);
+    color:black;
+    font-size:1.5rem;
+    font-family: serif;
+    width:150px;
+  }
 
   
