--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -4,7 +4,9 @@
           <a routerLink="/enroll">ENROLLMENT</a>
           <a routerLink="/adminattendance">ATTENDANCE</a>
           <a routerLink="/adminpayroll">PAYROLL</a>
-          <a routerLink="/adminnotification">NOTIFICATION</a>  
+          <a routerLink="/adminnotification">NOTIFICATION</a> 
+          <a routerLink="/userdetails">MANAGEUSERS</a>  
+ 
           <a routerLink="/loginadmin">LOGIN</a>  
         
     </div>
